2011-04-15  Daniel Krugler  <daniel.kruegler@googlemail.com> 	    Paolo Carlini  <paolo.carlini@oracle.com>

PR libstdc++/48635
	* include/bits/unique_ptr.h (unique_ptr<>::operator=(unique_ptr&&),
	unique_ptr<>::operator=(unique_ptr<>&&),
	unique_ptr<_Tp[],>::operator=(unique_ptr&&),
	unique_ptr<_Tp[],>::operator=(unique_ptr<>&&)): Forward the deleter
	instead of moving it.
	* testsuite/20_util/unique_ptr/assign/48635.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@172532 138bc75d-0d04-0410-961f-82ee72b054a4